# CFD-Lab

./: .gitignore  .gitignore.orig  CMakeLists.txt  git
GoogleTestLib/: CMakeLists.txt  README  cmake_run.sh
Project/: LatticeMesh-FlagField.fg
WS1/: MEMORY_LEAKS_REPORT  MEM_CHECK_REPORT  Makefile  README  REPORT::09-05-07:13:37  REPORT::09-05-09:08:12  REPORT::10-05-02:45:13  boundary_val.c  boundary_val_temp  helper.c.orig  helper.h  helper_BASE_9244.c  helper_LOCAL_9244.c  helper_REMOTE_9244.c  init.c  init.c.orig  init_temp  main.c  main.c.orig  main.c.orig.orig  memcheckreport  script.sh  script.sh.orig  sim  uvp.c  uvp.c.orig  uvp_temp  visual.c
WS2/: DataStructure.c  DataStructure.h  LBDefinitions.h  LBM.0.vtk  MEM_CHECK_REPORT  Makefile  README  boundary.c  boundary.h  collision.c  computeCellValues.c  cube.data  helper.c  helper.h  initLB.c  lbsim  main.c  perf.data  perf.data.old  script.sh  streaming.c  streaming.h  visualLB.c  ws-2-Group2.rav
WS3/: DataStructure.cpp  DataStructure.h  LBDefinitions.h  MEM_CHECK_REPORT  Makefile  README  boundary.cpp  boundary.h  cavity.data  channel.data  collision.cpp  collision.h  computeCellValues.cpp  computeCellValues.h  cube.data  dummy.data  helper.cpp  helper.h  initLB.cpp  initLB.h  lbm_tilted_plate.vtk  lbsim  main.cpp  plate.data  script.sh  step.data  streaming.cpp  streaming.h  visualLB.cpp  visualLB.h
WS4/: DataStructure.cpp  DataStructure.h  LBDefinitions.h  Makefile  boundary.cpp  boundary.h  cavity.data  helper.cpp  helper.h  initLB.cpp  initLB.h  lbsim  main.cpp  visualLB.cpp  visualLB.h
(+292 files in other folders)
